IFormFile from Post method are always null

--- a/WebAPI/WebApplication/appsettings.json
+++ b/WebAPI/WebApplication/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-7IHJ6M6;Initial Catalog=Candidates;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=DESKTOP-ILQI9QT;Initial Catalog=Candidates;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "IncludeScopes": false,
